--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,14 +42,12 @@
         <div class="col-md-6">
           <div class="well">
             <h2>Details</h2>
-            <p>This is a special Squirtle that is wearing sunglasses in-game!  When it evolves, Wartortle and Blastoise will also be wearing sunglasses.</p>
-            <img src="/static/img/sunglasses-squirtle.png"> <img src="/static/img/sunglasses-squirtle-back.png"><br>
-            <img src="/static/img/sunglasses-wartortle.png"> <img src="/static/img/sunglasses-wartortle-back.png"><br>
-            <img src="/static/img/sunglasses-blastoise.png"> <img src="/static/img/sunglasses-blastoise-back.png">
-            <p>Pokémon: Sunglasses Squirtle</p>
+            <p>This Pikachu will either know Fly or Surf. Plus, it's shiny, so it's a Pikablue!</p>
+            <img src="/static/img/pikablue.png">
+            <p>Pokémon: Flying/Surfing Pikablue</p>
             <p>Level: 5</p>
-            <p>Moves: Tackle, Growl</p>
-            <p>DVs: Random</p>
+            <p>Moves: Fly or Surf, Thundershock, Growl</p>
+            <p>DVs: Shiny!</p>
           </div>
         </div>
         <div class="col-md-6">
